--- a/crypto.bundle/Contents/Info.plist
+++ b/crypto.bundle/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleName</key>
 	<string>crypto</string>
 	<key>CFBundleVersion</key>
-	<string>1.11</string>
+	<string>1.12</string>
 	<key>KLInfo_U.S. – Crypto</key>
 	<dict>
 		<key>TICapsLockLanguageSwitchCapable</key>
@@ -22,7 +22,7 @@
 	<key>UkeleleInfo_U.S. – Crypto</key>
 	<dict>
 		<key>Font</key>
-		<string>Machine-Regular</string>
+		<string>Zephirum-Regular</string>
 		<key>FontSize</key>
 		<real>18</real>
 	</dict>
